# askql-rust

./: Cargo.toml  README.md
askql-parser/: Cargo.toml
askql-parser/src/: askcode.rs  lib.rs  parse.rs  reduce.rs  value.rs
askql-vm/: Cargo.toml  massif.out.50426
askql-vm/examples/: demo_server.rs
askql-vm/src/: lib.rs  resource.rs  run.rs  type.rs  typed.rs
askql-vm/src/resources/: mod.rs
askql-vm/src/resources/core/: ask.rs  call.rs  equals.rs  fragment.rs  fun.rs  get.rs  mod.rs  query.rs
askql-vm/src/resources/list/: mod.rs
askql-vm/src/resources/math/: max.rs  minus.rs  mod.rs  sum.rs  times.rs
askql-vm/src/resources/string/: concat.rs  mod.rs  to_lower_case.rs  to_upper_case.rs
src/: lib.rs
src/askcode/: mod.rs
src/types/: base.rs  mod.rs
