[package]
name = "askql-parser"
version = "0.1.0"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pest = "2.1.3"
# pest_derive = "2.1.0"
regex = "1.3.9"
# lazy_static = "1.4.0"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
