[package]
name = "askql-vm"
version = "0.1.0"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askql-parser = { path = "../askql-parser", version = "0.1.0" }
serde = "1.0"
async-trait = "0.1.31"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
