[package]
name = "askql-vm"
version = "0.1.0"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askql-parser = { path = "../askql-parser", version = "0.1.0" }
serde = "1.0"
async-trait = "0.1.31"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features = ["rustls"] }
serde_json = "1.0"
env_logger = "0.5.11"
actix-cors = "0.2.0"
actix-identity = "0.2.0"
log = "0.4.3"